Practice With Angular
-created an Angular practice project
-wrote a basic Angular module named "myApp" and used ng-app to reference it
-wrote a basic controller for the "myApp" module and used ng-controller to reference it
-wrote a basic data model and it's properties in the controller for the "myApp" module
-practiced with ng-init to initialize a value for an ng-model property

Next thing to work on is the Minesweeper game made with Angular, for which I have made a seperate repository.

--- a/JavaScriptCourseChallenge.html
+++ b/JavaScriptCourseChallenge.html
@@ -20,5 +20,7 @@
 	<button onclick="textReplace()">Reveal The Truth (.replace)</button>
 	<p id="txtRplc">MacOS is better than Windows</p>
 
+	<button onclick="tryCatchFunc()">Click to use a try-catch to handle and display an error message</button>
+	<p id="errorTest"></p>
 </body>
 </html>
